# DNS-BUILDER

./: .gitignore  README.md  behaviors.py  build.py  config.py  images.py  kaminsky.yml  logger.py  main.py  mkdocs.yml  pyproject.toml  rules.py  template.yml
.github/workflows/: deploy-docs.yml
configs/: auth.named.conf  bind_auth_base.conf  build_templates.json  recursor.named.conf
dnsb_utils/: README.md  pyproject.toml
dnsb_utils/src/dnsb_utils/: __init__.py
dnsb_utils/src/dnsb_utils/helpers/: __init__.py  zone_from_file.py
doc/: architecture.md  build-pipeline.md  cli.md  config-generation.md  config.md  developer-guide.md  dnsbattribute.md  dnssec.md  faq.md  getting-started.md  index.md  install.md  plugin.md  resources.md  ui-roadmap.md
doc/api/: index.md  openapi.json  openapi.md
doc/config/: auto.md  builds.md  external-images.md  images.md  index.md  processing-pipeline.md  top-level.md
doc/old/: comprehension.md  index.md
doc/root/: getting-started.md  install.md
doc/rule/: behavior-dsl.md  build-templates.md  builtins-and-placeholders.md  comprehension.md  config-generation.md  index.md  merge-and-override.md  paths-and-fs.md
scripts/: gen_openapi.py
src/dnsbuilder/: __init__.py  __main__.py  abstractions.py  attribute.py  base.py  cli.py  config.py  constants.py  exceptions.py  factories.py  preprocess.py  protocols.py  registry.py  sections.py
src/dnsbuilder/api/: deps.py  main.py  wsm.py
src/dnsbuilder/auto/: __init__.py  executor.py  manager.py
src/dnsbuilder/bases/: __init__.py  behaviors.py  external.py  includers.py  internal.py  sections.py
src/dnsbuilder/builder/: __init__.py  artifacts.py  behaviors.py  build.py  cached_builder.py  contexts.py  dnssec.py  image.py  includers.py  map.py  net.py  resolve.py  service.py  substitute.py  volume.py  zone.py
src/dnsbuilder/cache/: __init__.py  build.py  cache_manager.py  cache_view.py  manager.py  view.py
src/dnsbuilder/datacls/: __init__.py  artifacts.py  contexts.py  messages.py  pack.py  volume.py
src/dnsbuilder/images/: bind.py  factory.py  image.py  python.py  unbound.py
src/dnsbuilder/io/: __init__.py  decorators.py  fs.py  path.py
src/dnsbuilder/plugins/: __init__.py  base.py  discovery.py  manager.py
src/dnsbuilder/rules/: __init__.py  rule.py  version.py
src/dnsbuilder/utils/: __init__.py  dnssec.py  fstree.py  logger.py  merge.py  path.py  reflection.py  typing_compat.py  util.py  (+1 more)
test/io/: test_path.py
test/rules/: test_rules.py  test_version.py
test/sections/: __init__.py  test_section.py
test/utils/: test_zone.py
tests/: test_config.py  test_path.py
(+87 files in other folders)
