[project]
name = "dnsbuilder"
version = "0.8.0"
description = "A tool to generate complex DNS test environments using Docker."
dependencies = [
    "pyyaml",
    "colorlog",
    "pydantic",
    "pytest",
    "graphviz",
    "jinja2",
    "dnslib",
    "fsspec",
    "morefs[memfs]",
    "GitPython",
    "fastapi",
    "uvicorn[standard]"
]

[project.scripts]
dnsb = "dnsbuilder.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dnsbuilder = ["resources/**"]