[project]
name = "dnsbuilder"
version = "0.8.0"
description = "A tool to generate complex DNS test environments using Docker."
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "colorlog>=6.8.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "graphviz>=0.20.0",
    "jinja2>=3.1.0",
    "dnslib>=0.9.20",
    "fsspec>=2023.1.0",
    "morefs[memfs]>=0.2.0",
    "GitPython>=3.1.40",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0"
]

[project.scripts]
dnsb = "dnsbuilder.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dnsbuilder = ["resources/**"]