[project]
name = "dnsbuilder"
dynamic = ["version"]
description = "A tool to generate complex DNS test environments using Docker."
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "colorlog>=6.8.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "graphviz>=0.20.0",
    "jinja2>=3.1.0",
    "dnslib>=0.9.20",
    "dnspython>=2.0.0",
    "fsspec>=2023.1.0",
    "morefs[memfs]>=0.2.0",
    "GitPython>=3.1.40",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "python-on-whales>=0.65.0"
]

[project.scripts]
dnsb = "dnsbuilder.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "dnsbuilder.__version__"}

[tool.setuptools.package-data]
dnsbuilder = ["resources/**"]