[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsb_utils"
dynamic = ["version"]
description = "Utility helpers for DNS Builder auto scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dnslib",
    "dnsbuilder>=0.12.0"
]

[project.entry-points."dnsb.plugins"]
utils = "dnsb_utils:UtilsPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "dnsb_utils.__version__"}